<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/grey"
    tools:context=".DisplayActivity">

    <RelativeLayout
        android:id="@+id/main_top"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/purple">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textColor="@color/grey"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/main_user"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:onClick="onClick"
            android:padding="7dp"
            android:src="@drawable/user" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/main_search"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_top"
        android:background="@color/grey"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/mybtn"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/top_time"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_gravity="right"
                android:layout_marginRight="10dp"
                android:shadowColor="#909BCE"
                android:shadowDx="10.0"
                android:shadowDy="10.0"
                android:shadowRadius="3.0"
                android:text="@string/main_date"
                android:textColor="@color/grape"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp">

                <EditText
                    android:id="@+id/main_input"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/main_addbtn_bg"
                    android:gravity="center"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:textSize="30sp" />

                <ImageView
                    android:id="@+id/main_search_btn"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:layout_marginLeft="10dp"
                    android:onClick="onClick"
                    android:padding="13dp"
                    android:src="@drawable/search_icon" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:text="e.g. important, name, note"
                android:textSize="15dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/today_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/main_today"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/recent_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:text="@string/main_recent"
            android:textStyle="bold" />


    </LinearLayout>

    <ListView
        android:id="@+id/main_list1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_search"
        android:background="@color/grey"
        android:divider="@null"
        android:dividerHeight="5dp"
        android:padding="7dp"
        android:scrollbars="none"></ListView>

    <Button
        android:id="@+id/main_addItem"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/add_button"
        android:contentDescription="@string/app_name"
        android:onClick="onClick"
        android:text="+"
        android:textAlignment="center"
        android:textSize="45dp" />

</RelativeLayout>